syntax = "proto3";
package framesystem;
service FramesystemService {
  rpc ListCampaigns(ListCampaignsRequest) returns (ListCampaignsResponse) {}
}

message ListCampaignsRequest {}

message ListCampaignsResponse {
  repeated CampaignId campaign_id = 1;
}

message CampaignId {
  string id = 1;
  string name = 2;
}